--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
+    "react-range-slider-input": "^3.0.7",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1"
   },
