--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
+    "@sentry/react": "^8.53.0",
     "@tanstack/react-query": "^5.62.3",
     "axios": "^1.7.9",
     "cra-template-typescript": "1.2.0",
