Update branding to Eriprime; modify favicon and manifest files; adjust privacy policy and terms; enhance logo component; update meta tags and page titles for consistency

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Consult Solutions",
-  "name": "Create Consult Solutions Sample",
+  "short_name": "eriprime",
+  "name": "Eriprime",
   "icons": [
     {
       "src": "favicon.ico",
