--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
-    "@sentry/cli": "^2.41.1",
+    "@sentry/cli": "^2.42.3",
     "@sentry/react": "^8.53.0",
     "@tanstack/react-query": "^5.62.3",
     "axios": "^1.7.9",
@@ -18,10 +18,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && npm run sentry:sourcemaps",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org patienceman --project consult-solution-frontend ./ && sentry-cli sourcemaps upload --org patienceman --project consult-solution-frontend ./"
+    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org patienceman --project eriprime ./build && sentry-cli sourcemaps upload --org patienceman --project eriprime ./build"
   },
   "eslintConfig": {
     "extends": [
