--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16"
+    "tailwindcss": "^3.4.16",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
   }
 }
