--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
     "@sentry/cli": "^2.42.3",
-    "@sentry/react": "^8.53.0",
+    "@sentry/react": "^8.55.0",
     "@tanstack/react-query": "^5.62.3",
     "axios": "^1.7.9",
     "cra-template-typescript": "1.2.0",
@@ -18,10 +18,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && npm run sentry:sourcemaps",
+    "build": "react-scripts build && npm run sentry:sourcemaps && npm run sentry:sourcemaps",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org patienceman --project eriprime ./build && sentry-cli sourcemaps upload --org patienceman --project eriprime ./build"
+    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org patienceman --project eriprime-production ./build && sentry-cli sourcemaps upload --org patienceman --project eriprime-production ./build"
   },
   "eslintConfig": {
     "extends": [
@@ -42,13 +42,13 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "@types/axios": "^0.9.36",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16",
-    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
+    "tailwindcss": "^3.4.16"
   }
 }
