--- a/package.json
+++ b/package.json
@@ -18,10 +18,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && npm run sentry:sourcemaps && npm run sentry:sourcemaps",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org patienceman --project eriprime-production ./build && sentry-cli sourcemaps upload --org patienceman --project eriprime-production ./build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
