--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "axios": "^1.7.9",
     "cra-template-typescript": "1.2.0",
     "framer-motion": "^12.5.0",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
     "react-range-slider-input": "^3.2.1",
     "react-router-dom": "^7.0.2",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "sitemap": "^8.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "generate-sitemap": "node scripts/generate-sitemap.js"
   },
   "eslintConfig": {
     "extends": [
@@ -46,6 +50,7 @@
     "@types/axios": "^0.9.36",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.4",
+    "@types/react-helmet": "^6.1.11",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.4.49",
